--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -155,7 +155,7 @@
     }
   },
 
-  "section_title_server_configuration": "Server Configuration",
+  "section_title_server_configuration": "Paperless-ngx server",
   "@section_title_server_configuration": {
     "description": "Section header for server configuration block."
   },
@@ -164,9 +164,9 @@
     "description": "Text indicating the server is not yet configured."
   },
 
-  "section_title_global_tag_configuration": "Global Tag Configuration",
-  "@section_title_global_tag_configuration": {
-    "description": "Section header for global/default tags configuration."
+  "section_title_tag_configuration": "Tag Configuration",
+  "@section_title_tag_configuration": {
+    "description": "Section header for tags configuration dialog."
   },
   "tooltip_edit_tags": "Edit tags",
   "@tooltip_edit_tags": {
