--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,7 +4,7 @@
   "@action_select_none": {
     "description": "Button label to clear all selected tags in the tag selection dialog"
   },
-  "@@last_modified": "2025-08-03T19:38:00Z",
+  "@@last_modified": "2025-08-18T07:58:00Z",
 
   "connectionSuccess": "Connection successful",
   "@connectionSuccess": {
@@ -384,5 +384,77 @@
   "allow_self_signed_certificates_description": "Allow connections to servers with self-signed or invalid SSL certificates (not recommended for production)",
   "@allow_self_signed_certificates_description": {
     "description": "Description for the self-signed certificates toggle"
+  },
+
+  "field_label_server_name": "Server Name",
+  "@field_label_server_name": {
+    "description": "Label for the server name input field when adding/editing a server"
+  },
+
+  "validation_enter_server_name": "Please enter server name",
+  "@validation_enter_server_name": {
+    "description": "Validation message shown when the server name is empty"
+  },
+
+  "action_add_server": "Add Server",
+  "@action_add_server": {
+    "description": "Button label to add a new server"
+  },
+
+  "action_edit": "Edit",
+  "@action_edit": {
+    "description": "Button label to edit a server"
+  },
+
+  "action_delete": "Delete",
+  "@action_delete": {
+    "description": "Button label to delete a server"
+  },
+
+  "action_delete_server": "Delete Server",
+  "@action_delete_server": {
+    "description": "Title for the dialog confirming server deletion"
+  },
+
+  "message_delete_server_confirmation": "Are you sure you want to delete \"{serverName}\"? This action cannot be undone.",
+  "@message_delete_server_confirmation": {
+    "description": "Message shown when confirming server deletion",
+    "placeholders": {
+      "serverName": {
+        "type": "String",
+        "example": "My Paperless Server"
+      }
+    }
+  },
+
+  "section_title_servers": "Servers",
+  "@section_title_servers": {
+    "description": "Section header for servers configuration block."
+  },
+
+  "button_manage_servers": "Manage Servers",
+  "@button_manage_servers": {
+    "description": "Button label to open server management dialog."
+  },
+
+  "server_selected": "Selected: {serverName}",
+  "@server_selected": {
+    "description": "Text showing which server is currently selected.",
+    "placeholders": {
+      "serverName": {
+        "type": "String",
+        "example": "My Paperless Server"
+      }
+    }
+  },
+
+  "server_no_servers_configured": "No servers configured",
+  "@server_no_servers_configured": {
+    "description": "Text shown when no servers have been added yet."
+  },
+
+  "server_configure_first": "Please configure at least one server to start uploading documents",
+  "@server_configure_first": {
+    "description": "Message shown when user needs to configure a server before using the app."
   }
 }
